config/applications/oci/gateway/referencegrant-grafana-tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: oci-public-grafana-tls
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
  to:
    - group: ""
      kind: Secret
      name: grafana-gateway-tls
    - group: ""
      kind: Secret
      name: grafana-oci-gateway-tls
