config/applications/oci/gateway/referencegrant-prow-tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: oci-public-prow-tls
  namespace: prow
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
  to:
    - group: ""
      kind: Secret
      name: prow-gateway-tls
    - group: ""
      kind: Secret
      name: prow-oci-gateway-tls
