config/applications/oci/gateway/httproute-grafana-http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http-redirect
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: oci-public
      namespace: envoy-gateway-system
      sectionName: grafana-public-http
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: oci-public
      namespace: envoy-gateway-system
      sectionName: grafana-http
  hostnames:
    - monitoring.prow.falco.org
    - oci-monitoring.prow.falco.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
