config/applications/oci/gateway/httproute-prow-hook.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prow-hook
  namespace: prow
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: oci-public
      namespace: envoy-gateway-system
      sectionName: prow-public-https
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: oci-public
      namespace: envoy-gateway-system
      sectionName: prow-https
  hostnames:
    - prow.falco.org
    - oci-prow.falco.org
  rules:
    - matches:
        - path:
            type: Exact
            value: /hook
          method: POST
      backendRefs:
        - group: ""
          kind: Service
          name: hook
          port: 8888
          weight: 1
