config/applications/oci/gateway/httproute-prow-http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prow-dashboard-http-redirect
  namespace: prow
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: oci-public
      namespace: envoy-gateway-system
      sectionName: prow-public-http
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: oci-public
      namespace: envoy-gateway-system
      sectionName: prow-http
  hostnames:
    - prow.falco.org
    - oci-prow.falco.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
          method: GET
        - path:
            type: PathPrefix
            value: /
          method: HEAD
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
