config/applications/oci/gateway/httproute-prow.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prow-dashboard
  namespace: prow
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: oci-public
      namespace: envoy-gateway-system
      sectionName: prow-public-https
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: oci-public
      namespace: envoy-gateway-system
      sectionName: prow-https
  hostnames:
    - prow.falco.org
    - oci-prow.falco.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
          method: GET
        - path:
            type: PathPrefix
            value: /
          method: HEAD
        - path:
            type: Exact
            value: /spyglass/lens/buildlog/callback
          method: POST
      backendRefs:
        - group: ""
          kind: Service
          name: deck
          port: 80
          weight: 1
